alm-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alm-api
  namespace: demo-1
spec:
  selector:
    app: alm-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
