alm-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alm-web
  namespace: demo-1
spec:
  selector:
    app: alm-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
