alm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alm-ingress
  namespace: demo-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: alm.sendo.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alm-web
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: alm-api
                port:
                  number: 80
