alm-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: alm-test
  namespace: demo-1
spec:
  rules:
  - host: alm-test.demo-1.cluster-test
    http:
      paths:
      - backend:
          service:
            name: alm-api
            port:
              number: 80
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: alm-web
            port:
              number: 80
        path: /
        pathType: Prefix
