ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: alm-web
  namespace: demo-1
spec:
  rules:
  - host: alm.demo-1.cluster-test
    http:
      paths:
      - backend:
          service:
            name: alm-web
            port:
              number: 80
        path: /
        pathType: Prefix
